--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header"> <ul class="ul-header">
@@ -20,12 +20,57 @@
         </li>
     </ul>
 </header>
-   <about class="about">
-    <h1>creator : izgnoyy_ </h1>
-    <p>data : 12:01:2023</p>
-    <p>under data : 29:02:2023</p>
-    <img src="img/загруженное" alt="Qr-code">
-    <p>mami tepadini Qr-code tekwirib kor ))</p>
-   </about>
+<section class="section">
+    <div class="otre">
+         <h1 class="gold">Здесь есть все титулы</h1>
+         <p class="gerld">Создал izgnoyy_</p>
+        
+    </div>
+</section>
+<section class="section">
+    <div class="imges">
+            <img src="img/mir.png" alt="">
+            <div class="tecxt">
+                Это титулы Спакойного и доброго
+            </div>
+         </div>
+</section> 
+<section class="section">
+    <div class="imges">
+            <img src="img/king.png" alt="">
+            <div class="tecxt">
+                Это титулы самого силного 
+            </div>
+         </div>
+</section> 
+<section class="section">
+    <div class="imges">
+            <img src="img/krovaviy.png" alt="">
+            <div class="tecxt">
+                Это титулы Ебатутого 
+            </div>
+         </div>
+</section> 
+<section class="section">
+    <div class="imges">
+            <img src="img/vip.png" alt="">
+            <div class="tecxt">
+                Это титулы vip четких и Спакойных
+            </div>
+         </div>
+</section>  
+<footer class="footer">
+    <ul class="footer-ul">
+        <li class="footer-li">made in Uzbekistan</li>
+        <li class="footer-li"><a href="https://www.instagram.com/izgnoyy_/followers/"></a> insta izgnoyy_</li>
+        <li class="footer-li"><a href="https://t.me/isztirble"></a> telegram izgnoyy_</li>
+    </ul>
+    <ul class="footer-ul">
+        <li><img src="img/icon (1).jpg" alt=""></li>
+        
+    </ul>
+    29 school
+</footer>
+   
 </body>
 </html>
