--- a/about.html
+++ b/about.html
@@ -8,18 +8,27 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header"> <ul class="ul-header">
-        <li class="header-li">
-            <a href="index.html"> Global</a>
-        </li>
-        <li class="header-li">
-           <a href="imges.html">Statistic</a> 
-        </li>
-        <li class="header-li">
-           <a href="about.html">console</a> 
-        </li>
-    </ul>
-</header>
+
+    <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+              <input class="checkbox" type="checkbox" name="" id="" />
+              <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+              </div>  
+            <div class="logo">
+              <h1>29-Owners</h1>
+            </div>
+            <div class="menu-items">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="imges.html">Statics</a></li>
+            </div>
+          </div>
+        </div>
+      </nav>
 <section class="section">
     <div class="otre">
          <h1 class="gold">Здесь есть все титулы</h1>
@@ -67,9 +76,8 @@
     </ul>
     <ul class="footer-ul">
         <li><img src="img/icon (1).jpg" alt=""></li>
-        
-    </ul>
-    29 school
+       
+    </ul> <img src="img/загруженное" alt="">
 </footer>
    
 </body>
