--- a/imges.html
+++ b/imges.html
@@ -8,19 +8,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
-        <ul class="ul-header">
-            <li class="header-li">
-                <a href="index.html"> Global</a>
-            </li>
-            <li class="header-li">
-               <a href="imges.html">Statistic</a> 
-            </li>
-            <li class="header-li">
-               <a href="about.html">console</a> 
-            </li>
-        </ul>
-    </header>
+  <nav>
+    <div class="navbar">
+      <div class="container nav-container">
+          <input class="checkbox" type="checkbox" name="" id="" />
+          <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+          </div>  
+        <div class="logo">
+          <h1>29-Owners</h1>
+        </div>
+        <div class="menu-items">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="imges.html">Statics</a></li>
+        </div>
+      </div>
+    </div>
+  </nav>
     <div class="container">
       <div class="back">     
       <div class="card">
