--- a/index.html
+++ b/index.html
@@ -4,28 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sp</title>
+    <title>29-Owners</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
-        <ul class="ul-header">
-            <li class="header-li">
-                <a href="index.html"> Global</a>
-            </li>
-            <li class="header-li">
-               <a href="imges.html">Statistic</a> 
-            </li>
-        </ul>
-    </header>
+    <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+              <input class="checkbox" type="checkbox" name="" id="" />
+              <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+              </div>  
+            <div class="logo">
+              <h1>29-Owners</h1>
+            </div>
+            <div class="menu-items">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="imges.html">Statics</a></li>
+              <li><a href="memes.html">Memes</a></li>
+              <li><a href="https://www.instagram.com/izgnoyy_/">izgnoyy_</a></li>
+
+            </div>
+          </div>
+        </div>
+      </nav>
 <div class="jo">
     <global class="global">
        <data class="data">
-        2023 Fight in school?
+        News and Fight
        </data>
-        <h1 class="hrre">Список Драк</h1>
+        <h1 class="hrre">News</h1>
         <p class="gerld">здесь есть все драки за год</p>
-        <p class="gerld">начиная с 2023</p>
+        <p class="gerld">и новости </p>
+        <div class="fob">
+            <img src="img/dd.jpg" style="border-radius: 10px;">
+            <h1>Душанбадан ўқишга: таътиллар энди узайтирилмайди. Болалар боғчалари, мактаблар ва олий ўқув юртларида ўқиш қайси кундан бошланади?
+
+                • Тошкент – <p class="indes"><strong> 23 январ</strong></p></h1>
+        </div>
+        <div class="fob">
+            <img src="img/gitt.jpg" style="border-radius: 10px;">
+            <h1>Bu insonni 1924-yilda o‘ldirishgan, tanasidan judo qilingan boshini esa maxsus suyuqlikka solib 2014-yilgacha saqlab kelishgan. Buning sababi u odamni oxirgi so‘zlari butun Dunyoni qo‘rqitgan. Uning oxirgi so‘zlari...😱
+              <a href="https://www.instagram.com/izgnoyy_/"> >>>>>> izgnoyy_ </a>Padpiska tawamasen iloyim wunaq bol axxaxa
+            </h1>
+        </div>
+        <div class="fobe">
+             <img src="img/medgara.jpg" alt="">
+             <h1 class="gold">Один из силных фото</h1>
+        </div>
+       
     </global>
 
 
