--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>29-Owners</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.less">
 </head>
 <body>
+  <div class="spinner"></div>
     <nav>
         <div class="navbar">
           <div class="container nav-container">
@@ -25,6 +27,7 @@
               <li><a href="about.html">About</a></li>
               <li><a href="imges.html">Statics</a></li>
               <li><a href="memes.html">Memes</a></li>
+              <li><a href="girls.html">Girls</a></li>
               <li><a href="https://www.instagram.com/izgnoyy_/">izgnoyy_</a></li>
 
             </div>
@@ -37,19 +40,11 @@
         News and Fight
        </data>
         <h1 class="hrre">News</h1>
-        <p class="gerld">здесь есть все драки за год</p>
-        <p class="gerld">и новости </p>
         <div class="fob">
             <img src="img/dd.jpg" style="border-radius: 10px;">
             <h1>Душанбадан ўқишга: таътиллар энди узайтирилмайди. Болалар боғчалари, мактаблар ва олий ўқув юртларида ўқиш қайси кундан бошланади?
 
                 • Тошкент – <p class="indes"><strong> 23 январ</strong></p></h1>
-        </div>
-        <div class="fob">
-            <img src="img/gitt.jpg" style="border-radius: 10px;">
-            <h1>Bu insonni 1924-yilda o‘ldirishgan, tanasidan judo qilingan boshini esa maxsus suyuqlikka solib 2014-yilgacha saqlab kelishgan. Buning sababi u odamni oxirgi so‘zlari butun Dunyoni qo‘rqitgan. Uning oxirgi so‘zlari...😱
-              <a href="https://www.instagram.com/izgnoyy_/"> >>>>>> izgnoyy_ </a>Padpiska tawamasen iloyim wunaq bol axxaxa
-            </h1>
         </div>
         <div class="fobe">
              <img src="img/medgara.jpg" alt="">
