--- a/about.html
+++ b/about.html
@@ -22,10 +22,14 @@
               <h1>29-Owners</h1>
             </div>
             <div class="menu-items">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="imges.html">Statics</a></li>
-            </div>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="imges.html">Statics</a></li>
+                <li><a href="memes.html">Memes</a></li>
+                <li><a href="girls.html">Girls</a></li>
+                <li><a href="https://www.instagram.com/izgnoyy_/">izgnoyy_</a></li>
+  
+              </div>
           </div>
         </div>
       </nav>
