--- a/girls.html
+++ b/girls.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memes</title>
+    <title>girls</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
         position: absolute;
         padding-top: 360px;
         ">XAli Iwlavoma yaqnda boladi :)</h1>
-        <img src="img/ibo.jpg" class="ibo">
+        <img src="img/ibotwo.jpg" class="ibo">
         <!-- <code>2573</code> -->
     </div>
 </body>
