--- a/imges.html
+++ b/imges.html
@@ -225,7 +225,7 @@
           <h4 class="sc">vip</h4>
           <div class="size">
             <h3>8B-class</h3>
-            <span>8-4</span>
+            <span>17-3</span>
             <span>2008</span>
             <span>14 y.o</span>
           </div>
@@ -249,6 +249,25 @@
             <span>14 y.o</span>
           </div>
           <a href="https://www.instagram.com/kudratoff__k/">Instagram</a>
+        </div>
+      </div>
+      <div class="card">
+        <div class="imgBx">
+          <img src="img/vip.png" class="king">
+          <img src="img/mir.png" class="vip">
+          <img src="img/wox.jpg">
+          
+        </div>
+        <div class="contentBx">
+          <h2>shavkatoff_7707</h2>
+          <h4 class="sc">vip</h4>
+          <div class="size">
+            <h3>8D-class</h3>
+            <span>5-0</span>
+            <span>2008</span>
+            <span>14 y.o</span>
+          </div>
+          <a href="https://www.instagram.com/shavkatoff_7707/">Instagram</a>
         </div>
       </div>
       
