--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="imges.html">Statics</a></li>
-              <li><a href="memes.html">Memes</a></li>
-              <li><a href="girls.html">Girls</a></li>
               <li><a href="https://www.instagram.com/izgnoyy_/">izgnoyy_</a></li>
 
             </div>
@@ -40,6 +38,25 @@
         News and Fight
        </data>
         <h1 class="hrre">News</h1>
+        <div class="card-vs">
+          <img src="img/2023-01-30 (1).png" alt="">
+          
+          <div class="vs">
+            <p>30.01.2023</p>
+            <p>Yana wkal</p>
+            <div class="vs-c">
+              <p class="kir">MuhamadAli</p>
+              <p class="">vs</p>
+              <p class="mir">Abdullaziz</p>
+            </div>
+            <div class="vs-c">
+              <p>Xichkim yutmadi 
+                teng urwiwdi =
+              </p>
+            </div>
+          </div>
+          
+        </div>
     </global>
 
 
